# edgex-device-rpi

./: .gitignore  Build-Docker.md  Build-Snap.md  README.md
examples/Blink/: README.md  RPi_Blink_Led.yaml  blink_flow.json  configuration.toml  docker-compose.yml  wiring.fzz
examples/MotionDetector/: README.md  RPi_Motion_Detector.yaml  configuration.toml  docker-compose.yml  motion_detector_flow.json  register_mqtt_export.sh  wiring.fzz
res/: configuration.toml
res/example/: Device_RPi_Example.yaml  configuration.toml
scripts/: Dockerfile.alpine-3.8  build.sh  build_deps.sh  rpi_patch
snap/: snapcraft.yaml
snap/hooks/: install
snap/local/snap/hooks/: configure  install
src/c/: CMakeLists.txt  device_grove.h  device_rpi.h  grove_hd44780.h  grove_lcd.c  grove_lcd.h  main.c
src/c/cmake/: FindLibMRAA.cmake  FindLibcsdk.cmake
